Bug 1130051 - Compress mousemove IPDL messages. r=kats

Compress mousemove IPDL messages so that they do not spam the content
process.